--- a/app/styles/item/item.scss
+++ b/app/styles/item/item.scss
@@ -1,4 +1,79 @@
 .item-page{
+  margin: 0 5px;
+  .img-camera{
+    background-image: url('../images/camera.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: 0;
+  }
+  .content {
+    width: 200px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .inputfile {
+    height: 130px;
+    left: 0;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    width: 200px !important;
+  }
+
+  .inputfile + label {
+    color: $base-yellow;
+    font-size: 1.2em;
+    font-weight: normal;
+  }
+
+  .no-js .inputfile + label {
+    display: none;
+  }
+
+  .inputfile + label img {
+    vertical-align: middle;
+  }
+
+  .inputfile + label img {
+    width: 100px;
+    height: 80px;
+    margin-top: 0;
+  }
+  .input-label-imgs {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-family: Montserrat-Regular;
+    display: block;
+  }
+  .content-prev-images{
+    text-align: center;
+  }
+  .item-prev-image{
+    height: 100px;
+    margin: 4%;
+    width: 25%;
+  }
+  .list-header{
+    border-bottom: 1px solid #ddd;
+    margin: 10px 0;
+    padding: 0;
+    .list-title{
+      color: #666;
+      font-size: 0.9em;
+      text-transform: uppercase;
+    }
+  }
+  .list-item {
+    color: $base-grey;
+    text-transform: uppercase;
+  }
+  .without-items {
+    color: $base-grey;
+    line-height: 0.7em;
+    text-align: center;
+    vertical-align: middle;
+  }
   .item-title {
     color: #666;
     font-size: 15px;
