--- a/app/templates/menu/menu-provider.jade
+++ b/app/templates/menu/menu-provider.jade
@@ -9,25 +9,27 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
     ion-content
       ion-list
-        ion-item  
+        ion-item
           | {{::("menu.provider.orders"|translate)}}
-        ion-item(menu-close=''  ui-sref='provider.items')
+        ion-item(menu-close='' ui-sref='provider.items.index')
           | {{::("menu.provider.products"|translate)}}
-        ion-item  
+        ion-item(menu-close='' ui-sref='provider.clients.index')
+          | {{::("menu.provider.clients"|translate)}}
+        ion-item
           | {{::("menu.provider.account"|translate)}}
-        ion-item  
+        ion-item
           | {{::("menu.provider.dispatchers"|translate)}}
-        ion-item  
+        ion-item
           | {{::("menu.provider.establishments"|translate)}}
-        ion-item  
+        ion-item
           | {{::("menu.provider.promotionsAndDiscounts"|translate)}}
-        ion-item  
+        ion-item
           | {{::("menu.provider.moviggoAdvertising"|translate)}}
-        ion-item  
+        ion-item
           | {{::("menu.invite"|translate)}}
         ion-item(ng-controller='LoginController as loginVm', ng-click='loginVm.logout()')
           | {{::("menu.logout"|translate)}}
-        ion-item.gray-item 
+        ion-item.gray-item
           | {{::("menu.changeTo"|translate)}}
         ion-item.user-type(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.user.buyer"|translate)}}
