remplace link to ion-item

--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -9,7 +9,7 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
     ion-content
       ion-list
-        ion-item(menu-close='' class='menu-header')
+        ion-item(menu-close='' class='menu-header' ng-if="siteVm.user.name")
           | {{siteVm.userName()}}
         ion-item(menu-close='' ui-sref='app.profile.info')
           | {{::("menu.profile"|translate)}}
