--- a/app/styles/login/general.scss
+++ b/app/styles/login/general.scss
@@ -1,6 +1,5 @@
 .login-form {
   .moviggo-logo-1 {
-    margin-top: 40px;
     margin-bottom: 50px;
   }
 
@@ -16,24 +15,30 @@
     top: 5px;
   }
 }
+
+.center-items-login{
+  width: 100%;
+}
+
 @media (max-width: 768px) {
-  .align-login {
+  .center-items-login {
     margin-left: 0px;
     margin-right: 0px;
-    width: 100%;
   }
-  .top-logo{
-    display: block;
+
+  .moviggo-logo-1 {
+    margin-top: 40px;
   }
 }
+
 @media (min-width: 769px) {
-  .align-login {
+  .center-items-login {
     margin-left: 25%;
     margin-right: 25%;
-    width: 100%;
   }
-  .top-logo{
-    height: 30px;
+
+  .moviggo-logo-1 {
+    margin-top: 70px;
   }
 }
 
