--- a/app/styles/login/general.scss
+++ b/app/styles/login/general.scss
@@ -4,6 +4,7 @@
   }
 
   .moviggo-logo-1 {
+    margin-top: 40px;
     margin-bottom: 50px;
 
     @media (min-height: 500px) {
@@ -62,5 +63,5 @@ ion-view[hide-nav-bar="true"] {
     .bar-header {
       display: none;
     }
-}
+  }
 }
