--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -1,63 +1,67 @@
 .resource-form {
   .fields-wrapper {
-    width: 100%;
-    padding-bottom: 100px; // some padding because of fixed bottom bar
-  }
+    height: 100%;
 
-  legend {
-    border: 0;
-    font-size: 16px;
-    line-height: 30px;
-    text-transform: uppercase;
-    font-family: Montserrat-SemiBold;
-  }
-
-  .item-error {
-    border-color: $error-red;
-
-    .input-label {
-      color: $error-red;
+    form {
+      width: 100%;
+      padding-bottom: 100px; // some padding because of fixed bottom bar
     }
-  }
 
-  label.item-input.item-stacked-label,
-  label.item-input.item-select {
-    // override default
-    margin-top: 15px;
-    margin-bottom: 30px;
-    padding-bottom: 0;
-    padding-left: 0;
-
-    .input-label {
-      font-size: 14px;
+    legend {
+      border: 0;
+      font-size: 16px;
+      line-height: 30px;
       text-transform: uppercase;
-      font-family: Montserrat-Regular;
+      font-family: Montserrat-SemiBold;
     }
 
-    input {
-      &[type=tel],
-      &[type=text],
-      &[type=email],
-      &[type=number],
-      &[type=password] {
-        padding-left: 15px;
-        padding-bottom: 0;
-        padding-top: 0;
-        font-size: 16px;
-        height: 25px;
+    .item-error {
+      border-color: $error-red;
+
+      .input-label {
+        color: $error-red;
       }
     }
+
+    label.item-input.item-stacked-label,
+    label.item-input.item-select {
+      // override default
+      margin-top: 15px;
+      margin-bottom: 30px;
+      padding-bottom: 0;
+      padding-left: 0;
+
+      .input-label {
+        font-size: 14px;
+        text-transform: uppercase;
+        font-family: Montserrat-Regular;
+      }
+
+      input {
+        &[type=tel],
+        &[type=text],
+        &[type=email],
+        &[type=number],
+        &[type=password] {
+          padding-left: 15px;
+          padding-bottom: 0;
+          padding-top: 0;
+          font-size: 16px;
+          height: 25px;
+        }
+      }
+    }
+
+    .bar.bar-footer {
+      position: relative;
+    }
   }
 
-  .bar.bar-footer {
-    position: relative;
-  }
-}
-
-// hacking error messages so they float below inputs
-.resource-form {
-  .errors-wrapper {
-    position: absolute;
-    margin-top: -30px;
+  // hacking error messages so they float below inputs
+  .resource-form {
+    .errors-wrapper {
+      position: absolute;
+      margin-top: -30px;
+    }
   }
 }
