--- a/app/templates/courier/new.jade
+++ b/app/templates/courier/new.jade
@@ -3,7 +3,8 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.resource-form
+
+  ion-content.resource-form(locking="false")
     .row
       form(
         name="newCourierForm"
