--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -2,8 +2,9 @@ ion-view(
   view-title="Login",
   hide-nav-bar="true"
 )
-  ion-content.login-form
+  ion-nav-bar
     back-button
+  ion-content.login-form
     .row
       .moviggo-logo-1
     .row
