--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -2,7 +2,7 @@ ion-content(scroll="false")
   .profile-page
     .profile-header
       .user-name
-        |{{ siteVm.user.name }}
+        |{{ siteVm.userName() }}
     .profile-body
       ion-tabs.state-tabs
         ion-tab(
