--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -2,8 +2,9 @@ ion-view(
   view-title="Registro",
   hide-nav-bar="true"
 )
-  ion-content.login-form
+  ion-nav-bar
     back-button
+  ion-content.login-form
     .row
       .col.header-text Crear mi cuenta
     .row
