--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -7,7 +7,7 @@ ion-view(
   ion-content.login-form
     .row
       .moviggo-logo-1
-    .row
+    .center-items-login
       form(ng-submit='loginVm.login()')
         .list.list-inset.constraint-width
           label.item.item-input
@@ -31,10 +31,10 @@ ion-view(
             type='submit',
             value='{{::("login.login"|translate)}}'
           ).button.button-primary.button-block
-          
+
     .list.list-inset.list--top-narrow.constraint-width
       a.button.button-block.button-clear.button-link(ui-sref='send') {{::("login.forgotPassword"|translate)}}
-      
+
       .button.button-block.facebook-login(ng-click="loginVm.loginWithFB()")
         span.fb-left-icon
         span.fb-copytext {{::("login.continueWithFacebook"|translate)}}
