clases al final - Gemfile.lock

--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -7,7 +7,7 @@ hide-nav-bar="true"
   ion-content.login-form
     .row
       .moviggo-logo-1
-    .center-items-login
+    .row
       form(ng-submit='loginVm.login()')
         .list.list-inset.constraint-width
           label.item.item-input
