--- a/app/styles/login/general.scss
+++ b/app/styles/login/general.scss
@@ -12,6 +12,16 @@
     }
   }
 
+  .center-items-login {
+    margin-left: 0;
+    margin-right: 0;
+
+    @media (min-width: $grid-responsive-md-break) {
+      margin-left: 25%;
+      margin-right: 25%;
+    }
+  }
+
   form {
     width: 100%;
   }
