--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -17,6 +17,10 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("menu.client.cart"|translate)}}
         ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.client.category"|translate)}}
+        ion-item.gray-item(ng-repeat='categorie in menuVm.categories'
+                           ui-sref='app.categories.show({id: categorie.id})'
+                           menu-close='')
+          li {{::categorie.titulo}}
         ion-item
           | {{::("menu.account"|translate)}}
         ion-item.gray-item
