customer for buyer

--- a/app/styles/profile/profile.scss
+++ b/app/styles/profile/profile.scss
@@ -38,7 +38,7 @@
     }
 
     //etiqueta que hace mencion al dato del comprador(Ej: "username:")
-    .label-profile-buyer {
+    .label-profile-customer {
       border-right: 0.1rem solid #FDC30D;
     }
   }
