--- a/app/styles/common/buttons.scss
+++ b/app/styles/common/buttons.scss
@@ -29,6 +29,27 @@
   }
 }
 
+.button-white-cta {
+  background-color: $white;
+  border-radius: 0;
+  border: 3px solid $base-yellow;
+  color: $base-yellow;
+  text-transform: uppercase;
+  padding: 3px 18px;
+  line-height: 30px;
+  font-family: Montserrat-Regular;
+
+  &:hover {
+    background-color: $base-yellow;
+    color: $white;
+  }
+
+  &.activated {
+    border-color: $base-yellow;
+    background-color: $base-yellow;
+  }
+}
+
 .facebook-login,
 .facebook-login.activated, {
   @extend .common-button;
@@ -40,7 +61,8 @@
 }
 
 .button-primary,
-.facebook-login {
+.facebook-login,
+.button-white-cta {
   &.activated {
     color: $white;
   }
