--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,6 +33,7 @@
 @import "directives/product-counter";
 @import "directives/action-button";
 @import "directives/link-button";
+@import "directives/slick-provider";
 @import "categories/index";
 @import "categories/show";
 @import "item/item";
